@@ -1462,7 +1462,7 @@ int main( int argc, char** argv ) {
 	core_init( MEM_KILOBYTES( 1 ), MEM_MEGABYTES( 128 ) );
 	defer( core_shutdown() );
 
-	printf( "Builder v%d.%d.%d RC3\n\n", BUILDER_VERSION_MAJOR, BUILDER_VERSION_MINOR, BUILDER_VERSION_PATCH );
+	printf( "Builder v%d.%d.%d RC4\n\n", BUILDER_VERSION_MAJOR, BUILDER_VERSION_MINOR, BUILDER_VERSION_PATCH );
 
 	buildContext_t context = {};
 	context.flags |= BUILD_CONTEXT_FLAG_SHOW_COMPILER_ARGS | BUILD_CONTEXT_FLAG_SHOW_STDOUT;
