@@ -4,6 +4,7 @@ v0.6.0, <RELEASE DATE HERE>:
 	* Added support for project folders.  Projects that now have slashes in their names will cause Builder to put that project inside a project folder in the Solution Explorer.
 		* For example: If you set a VisualStudioProject::name to be "games/shooter" then Builder will create a project called "shooter" that is inside a project folder called "games".
 	* Fixed top-level files and some subfolders inside VisualStudioProject::code_folders not getting added to the Visual Studio project.
+	* Fixed IntelliSense not correctly showing additional include and library paths.
 * on_pre_build() and on_post_build() now always use the path of the input file as the CWD.
 * Refactored the system that reads and writes .build_info files.
 	* The old way used to be one system for reading the files and another for writing, but now it's one unified system that does both.
